# DB---Laboratoria

./: Readme.md  conf.py  index.rst  pyproject.toml
Aplikacja/: App.py  AppHandlers.py  DBHandling.py  file.csv  temp.csv  temp.db
Backend/: BackendApp.py  postgress.py
docs/: Instrukcje.rst
